<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.SenhaAlarmeActivity">

    <TextView
        android:id="@+id/textViewExemplo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/insira_uma_senha_num_rica_de_6_digitos"
        android:textColor="#45B5EC"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/defina_uma_senha_para_o_alarme"
        android:textColor="#45B5EC"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputSenhaAlarme"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExemplo2"
        app:layout_constraintVertical_bias="0.143"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorOlhoSenha">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextSenhaAlarme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_cadeado_cinza_24dp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/senha"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColor="#45B5EC"
            android:textColorHint="#45B5EC"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonSalvarSenhaAlarme"
        android:layout_width="245dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="124dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:onClick="salvarSenha"
        android:text="@string/salvar"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputSenhaAlarme"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/buttonAlterarSenhaAlarme"
        android:layout_width="245dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:onClick="alterarSenha"
        android:text="@string/alterar_senha"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSalvarSenhaAlarme" />


</android.support.constraint.ConstraintLayout>