<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.SobreFragment">


        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-light"
            android:text="Equipe do aplicativo"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewFuncaoDev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagem_lucas"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/lucas"
            app:civ_border_color="@color/branco_translucido"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNomeDevUm" />

        <TextView
            android:id="@+id/textViewNomeDevDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/lucas_martins"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagem_lucas" />

        <TextView
            android:id="@+id/textViewNomeDevTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/marcelo_souza"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagem_marcelo" />

        <TextView
            android:id="@+id/textViewNomeDevQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/whalesson"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagem_whalesson" />

        <TextView
            android:id="@+id/textViewFuncaoDevDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:text="@string/programa_o_do_arduino"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imagem_lucas"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmailDevFabiano" />

        <TextView
            android:id="@+id/textViewFuncaoDevTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="16dp"
            android:text="@string/programa_o_mobile_e_web_service"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imagem_marcelo"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmailDevLucas" />

        <TextView
            android:id="@+id/textViewEmailDevLucas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_email_cinza_24dp"
            android:text=" Email: lmartins3007@gmail.com"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toEndOf="@+id/imagem_lucas"
            app:layout_constraintTop_toBottomOf="@+id/textViewFuncaoDevDois" />

        <TextView
            android:id="@+id/textViewEmailDevMarcelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:drawableLeft="@drawable/ic_email_cinza_24dp"
            android:text=" Email: marcelo@object1ve.com"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toEndOf="@+id/imagem_marcelo"
            app:layout_constraintTop_toBottomOf="@+id/textViewFuncaoDevTres" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagem_fabiano"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/fabiano"
            app:civ_border_color="@color/branco_translucido"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

        <TextView
            android:id="@+id/textViewNomeDevUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fabiano_luiz"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagem_fabiano" />

        <TextView
            android:id="@+id/textViewFuncaoDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:text="@string/designer_do_aplicativo_mobile_e_web"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imagem_fabiano"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

        <TextView
            android:id="@+id/textViewEmailDevFabiano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:drawableLeft="@drawable/ic_email_cinza_24dp"
            android:text=" Email: fabianoluizj@gmail.com"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toEndOf="@+id/imagem_fabiano"
            app:layout_constraintTop_toBottomOf="@+id/textViewFuncaoDev" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagem_marcelo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/marcelo"
            app:civ_border_color="@color/branco_translucido"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNomeDevDois" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagem_whalesson"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/whalesson"
            app:civ_border_color="@color/branco_translucido"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNomeDevTres" />

        <TextView
            android:id="@+id/textViewFuncaoDevQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="16dp"
            android:text="Programação Web e Arduino"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imagem_whalesson"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmailDevMarcelo" />

        <TextView
            android:id="@+id/textViewEmailDevWhalesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:drawableLeft="@drawable/ic_email_cinza_24dp"
            android:text=" Email: whalesson345@gmail.com"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toEndOf="@+id/imagem_whalesson"
            app:layout_constraintTop_toBottomOf="@+id/textViewFuncaoDevQuatro" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>